aligned header text better with graphic. Fixed link in Timeline

--- a/docs/static/css/styles.css
+++ b/docs/static/css/styles.css
@@ -28,7 +28,7 @@ header a {
 }
 
 header h3 {
-  padding-top: .75em;
+  padding-top: .65em;
 }
 
 nav ul {
